Create departure routes
